# kybernetes-motioncontroller-freertos

./: .gitmodules  CMakeLists.txt  README.md
cmake/: avr.cmake
dependencies/freertos/: CMakeLists.txt
src/: CMakeLists.txt  i2c.c  i2c.h  main.c
